--- a/src/main/resources/static/css/Register.css
+++ b/src/main/resources/static/css/Register.css
@@ -340,7 +340,7 @@ input::-webkit-input-placeholder{
 }
 
 #success_msg{
-    height: 155px;
+    height: 205px;
     margin: 0 0 30px;
 }
 #success_msg .success_tag{
@@ -380,7 +380,7 @@ input::-webkit-input-placeholder{
         color: #fefefe;
 }
 #abtn{
-    display: inline-block;
+    display: inline;
     line-height: 52px;
     width: 160px;
     height: 54px;
