--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -1,16 +1,21 @@
+
+/*全局样式控制*/
+
 * {
     margin: 0;
     padding: 0;
 }
 
-i,
-em {
+
+i, em {
     font-style: normal;
 }
 
 li {
     list-style: none;
+
     float: left;
+
 }
 
 img {
@@ -32,17 +37,25 @@ a:hover {
     color: #c81623;
 }
 
-input,
-button {
+
+input, button {
+
     font-family: 'Microsoft YaHei', 'Heiti SC', tahoma, arial, 'Hiragino Sans GB', '\5B8B\4F53', sans-serif;
 }
 
 body {
     -webkit-font-smoothing: antialiased;
+
     background-color: #fff;
+
+
+
     font: 12px/1.5 'Microsoft YaHei', 'Heiti SC', tahoma, arial, 'Hiragino Sans GB', '\5B8B\4F53', sans-serif;
     color: #666;
 }
+
+
+/*引入矢量字体和配置样式*/
 
 @font-face {
     font-family: 'iconfont';
